--- a/app/globals.css
+++ b/app/globals.css
@@ -8,5 +8,6 @@
   --background-end-rgb: 255, 255, 255;
 }
 
-@media (prefers-color-scheme: dark) {
+.radix-themes {
+  --default-font-family: var(--font-inter) !important;
 }
