--- a/app/globals.css
+++ b/app/globals.css
@@ -11,3 +11,9 @@
 .radix-themes {
   --default-font-family: var(--font-inter) !important;
 }
+
+.CodeMirror,
+.CodeMirror-scroll {
+  max-height: 250px;
+  min-height: 250px;
+}
