--- a/app/globals.css
+++ b/app/globals.css
@@ -17,3 +17,9 @@
   max-height: 250px;
   min-height: 250px;
 }
+
+@layer utilities {
+  .nav-link {
+    @apply text-zinc-500 hover:text-zinc-800 transition-colors;
+  }
+}
